--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 indoor_outdoor**/
 .idea/
 model_checkpoint/
+model_checkpoint_del/
 model_results/
+model_results_del/
 __pycache__/
 reference_files/model_results.zip
