--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 model_checkpoint/
 model_results/
 data/
+indoor_outdoor/dist/
+indoor_outdoor/Distutils*
 model_checkpoint_del/
 model_results_del/
 __pycache__/
